interface-segregation-principle/good/src/main/java/example/Eatable.java
package example;

public interface Eatable {
    void eat();
}
