interface-segregation-principle/bad/src/main/java/example/Worker.java
package example;

public interface Worker {

    void work();

    void eat();

    void sleep();
}
